; ModuleID = '/home/carl/AnghaBench/esp-idf/components/driver/test/extr_test_timer.c_all_timer_pause.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/driver/test/extr_test_timer.c_all_timer_pause.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TIMER_GROUP_0 = common dso_local global i32 0, align 4
@TIMER_0 = common dso_local global i32 0, align 4
@ESP_OK = common dso_local global i64 0, align 8
@TIMER_1 = common dso_local global i32 0, align 4
@TIMER_GROUP_1 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @all_timer_pause to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @all_timer_pause() #0 {
  %1 = alloca i64, align 8
  %2 = load i32, i32* @TIMER_GROUP_0, align 4
  %3 = load i32, i32* @TIMER_0, align 4
  %4 = call i64 @timer_pause(i32 %2, i32 %3)
  store i64 %4, i64* %1, align 8
  %5 = load i64, i64* %1, align 8
  %6 = load i64, i64* @ESP_OK, align 8
  %7 = icmp eq i64 %5, %6
  %8 = zext i1 %7 to i32
  %9 = call i32 @TEST_ASSERT(i32 %8)
  %10 = load i32, i32* @TIMER_GROUP_0, align 4
  %11 = load i32, i32* @TIMER_1, align 4
  %12 = call i64 @timer_pause(i32 %10, i32 %11)
  store i64 %12, i64* %1, align 8
  %13 = load i64, i64* %1, align 8
  %14 = load i64, i64* @ESP_OK, align 8
  %15 = icmp eq i64 %13, %14
  %16 = zext i1 %15 to i32
  %17 = call i32 @TEST_ASSERT(i32 %16)
  %18 = load i32, i32* @TIMER_GROUP_1, align 4
  %19 = load i32, i32* @TIMER_0, align 4
  %20 = call i64 @timer_pause(i32 %18, i32 %19)
  store i64 %20, i64* %1, align 8
  %21 = load i64, i64* %1, align 8
  %22 = load i64, i64* @ESP_OK, align 8
  %23 = icmp eq i64 %21, %22
  %24 = zext i1 %23 to i32
  %25 = call i32 @TEST_ASSERT(i32 %24)
  %26 = load i32, i32* @TIMER_GROUP_1, align 4
  %27 = load i32, i32* @TIMER_1, align 4
  %28 = call i64 @timer_pause(i32 %26, i32 %27)
  store i64 %28, i64* %1, align 8
  %29 = load i64, i64* %1, align 8
  %30 = load i64, i64* @ESP_OK, align 8
  %31 = icmp eq i64 %29, %30
  %32 = zext i1 %31 to i32
  %33 = call i32 @TEST_ASSERT(i32 %32)
  ret void
}

declare dso_local i64 @timer_pause(i32, i32) #1

declare dso_local i32 @TEST_ASSERT(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
